--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
+    "newLine": "lf",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
